--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongoose": "^5.2.15",
-    "router": "^1.3.3"
+    "mongoose": "^5.2.16",
+    "router": "^1.3.3",
+    "moment": "^2.22.2",
+    "socket.io": "*"
   }
 }
